--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: devops-toolkit
-        image: vfarcic/devops-toolkit
+        image: infovein69/devops-toolkit
         ports:
         - containerPort: 80
         resources:
